--- a/index.css
+++ b/index.css
@@ -19,3 +19,25 @@ body {
   padding: 15px;
   z-index: 1000;
 }
+.navbar a {
+  color: white;
+  margin: 0 15px;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.navbar a:hover {
+  color: #f4c10f;
+}
+
+/* PARALLAX */
+.parallax {
+  min-height: 100vh;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
