--- a/index.css
+++ b/index.css
@@ -1,14 +1,11 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
+*
 body {
   font-family: 'Lato', sans-serif;
   line-height: 1.6;
 }
-
+.home-bg {
+  background-image: url("home.jpg");
+}
 /* NAVBAR */
 .navbar {
   position: fixed;
