--- a/index.css
+++ b/index.css
@@ -68,6 +68,9 @@ p {
 
 .content h2 {
   margin-bottom: 20px;
+  font: 12px;
+  font-family: Times New Roman;
+  
 }
 .profile-section {
     max-width: 1000px;
@@ -94,8 +97,8 @@ p {
 
 /* Image styling */
 .profile-image img {
-    width: 500px;
-    height: 700px;
+    width: 300px;
+    height: 400px;
     border-radius: 6px;
 }
 
