--- a/index.css
+++ b/index.css
@@ -42,15 +42,15 @@ p {
   justify-content: center;
 }
 .bg1 {
-  background-image: url("images/bg1.jpg");
+  background-image: url("image1.jpg");
 }
 
 .bg2 {
-  background-image: url("images/bg2.jpg");
+  background-image: url("image2.jpg");
 }
 
 .bg3 {
-  background-image: url("images/bg3.jpg");
+  background-image: url("image.jpg");
 }
 
 .caption h1 {
